deployment_gcp_sixth.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcp-hello-message-app
  labels:
    app: gcp-hello-message-app
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: gcp-hello-message-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gcp-hello-message-app-deployment-v1
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: gcp-hello-message-app
        version: v1
    spec:
      containers:
      - name: gcp-hello-message-app
        image: gcr.io/anthos-poc-252613/gcp-hello-message-app:6.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
---
