duplicate.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcp-hello-message-app
  labels:
    app: gcp-hello-message-app
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: gcp-hello-message-app
  type: ClusterIP
---
