master-app.yaml
##################################################################################################
# Main  service receiving response from ingress 
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: azure-master-app
  labels:
    app: azure-master-app
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: azure-master-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: azure-master-app-deployment-v1
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: azure-master-app
        version: v1
    spec:
      containers:
      - name: azure-master-app
        image: amexpoc.azurecr.io/amex-anthos/master:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: amexpoc
---
