workloadv2.yaml
##################################################################################################
# Main  service receiving response from ingress 
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: azure-master-app
  labels:
    app: azure-master-app
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: azure-master-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: azure-master-app-deployment-v1
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: azure-master-app
        version: v1
    spec:
      containers:
      - name: azure-master-app
        image: amexpoc.azurecr.io/amex-anthos/master:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: amexpoc
---
##################################################################################################
# Hello message services being called by main service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: hello-message-app
  labels:
    app: hello-message-app
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: hello-message-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-message-app-deployment-v1
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: hello-message-app
        version: v1
    spec:
      containers:
      - name: hello-message-app
        image: amexpoc.azurecr.io/amex-anthos/v3:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
      imagePullSecrets:
      - name: amexpoc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-message-app-deployment-v2
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: hello-message-app
        version: v2
    spec:
      containers:
      - name: hello-message-app
        image: amexpoc.azurecr.io/amex-anthos/v4:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
      imagePullSecrets:
      - name: amexpoc
---
##################################################################################################
# Azure Hello message service being called by main service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: azure-hello-message-app
  labels:
    app: azure-hello-message-app
spec:
  ports:
  - port: 8889
    name: http
  selector:
    app: azure-hello-message-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: azure-hello-message-app-deployment-v1
spec:
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: azure-hello-message-app
        version: v1
    spec:
      containers:
      - name: azure-hello-message-app
        image: amexpoc.azurecr.io/amex-anthos/v5:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8889
      imagePullSecrets:
      - name: amexpoc
---
