destinationrules_helloworld.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-boot
spec:
  host: spring-boot
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
