istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-master-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azure-master-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-master-gateway
  http:
  - route:
    - destination:
        host: azure-master-app
        port:
          number: 8080
---
